2011-11-21  Adam Klein  <adamk@chromium.org>

        Add GYP-generated WTF.xcodeproj to .gitignore after r100851.

        * .gitignore:

2011-11-21  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

        [Qt] [WK2] WebKitTestRunner doesn't build in debug
        https://bugs.webkit.org/show_bug.cgi?id=72827

        Reviewed by Andreas Kling.

        Add exports to fix WebKitTestRunner debug build.

        * Source/qtwebkit-export.map:

2011-11-21  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        [Qt] Add WebView.view attached property support for dialogs in QML
        https://bugs.webkit.org/show_bug.cgi?id=72825

        Reviewed by Simon Hausmann.

        Export QQuickWebViewAttached.

        * Source/qtwebkit-export.map:

2011-11-21  Noel Gordon  <noel.gordon@gmail.com>

        Update .gitignore for latest WebKitLibraries
        https://bugs.webkit.org/show_bug.cgi?id=72851

        Reviewed by Andreas Kling.

        * .gitignore: updates to silence 'git status' about WebKitLibraries files.

2011-11-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Update NEWS and configure.ac for 1.7.2 release
        https://bugs.webkit.org/show_bug.cgi?id=72868

        Reviewed by Xan Lopez.

        * configure.ac: Bumped version number.

2011-11-19  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Build fix after GeneratedImage refactoring.

        * wscript:

2011-11-19  Alexis Menard  <alexis.menard@openbossa.org>

        [Qt] Add the map file symbols export as a dependency of the final qmake target.
        https://bugs.webkit.org/show_bug.cgi?id=72740

        Reviewed by Simon Hausmann.

        Add the symbols file part of the target dependencies.

        * Source/api.pri:

2011-11-18  Daniel Bates  <dbates@rim.com>

        Add CMake build infrastructure for the BlackBerry port
        https://bugs.webkit.org/show_bug.cgi?id=72768

        Reviewed by Adam Barth and Antonio Gomes.
